# stipo

./: .dockerignore  .gitignore  Dockerfile  Stipo54.py  db.sqlite3  docker-compose.yml  main.py  manage.py  pyproject.toml  readme.md  report_data.json  requirements.txt  run_git_ls.py  scholarships.xlsx  search_migrations.py  stipo54.py  test.py  test2.py  test_exec.py  test_exec_output.txt  test_mail_direct.py  test_send_code.py
STEPO_BACKEND/: asgi.py  settings.py  urls.py  wsgi.py
app/: admin.py  ai_utils.py  apps.py  embed1.py  models.py  report_utils.py  serializers.py  signals.py  stepo47.py  stipo54.py  tests.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_scholarshipapplicant_success_count.py  0003_coupon.py  0004_coupon_discount_persant_alter_coupon_code.py  0005_rename_discount_persant_coupon_discount.py  0006_predefinedscholarship.py  0007_rename_org_assets_predefinedscholarship_organization_assets_and_more.py  0008_predefinedscholarship_sv_and_more.py  0009_alter_predefinedscholarship_subject.py  0010_remove_predefinedscholarship_study_level_and_more.py  0011_siteconfig_pinecone_updated_and_more.py  0012_alter_siteconfig_scholarships_db_file.py  0013_alter_siteconfig_scholarships_db_file.py  0014_siteconfig_query_template_siteconfig_use_default.py  0015_remove_siteconfig_process_charge.py  0016_predefinedscholarship_is_organization_and_more.py  0017_predefinedscholarship_sport.py  0018_alter_predefinedscholarship_sport.py  0019_alter_predefinedscholarship_sport_and_more.py  (+10 more)
nginx/: default.conf
reports/: new_scholarships_db_y3NOQ4t.xlsx
